[GGC-314] fix should solve issue with TeamCEO text overlapping top team image

--- a/src/components/teamList/TeamList.css
+++ b/src/components/teamList/TeamList.css
@@ -40,5 +40,6 @@
     transform: translate3d(0,0,0);
     width: 100%;
     flex-wrap: wrap;
+    margin-top: 10em;
   }
 }
