--- a/src/containers/teamAll/TeamAll.css
+++ b/src/containers/teamAll/TeamAll.css
@@ -8,8 +8,4 @@
   .gg-section-container--teamAll {
     padding-bottom: 0;
   }
-
-  .team-list {
-    margin-top: 5em;
-  }
 }
